--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,9 @@
         <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ 'FARMER_USE' | translate }}</h5>
           <p class="card-text flex-grow-1">{{ 'REGISTER_LAND_DETAILS' | translate }}</p>
-          <a href="/field-details" class="btn btn-primary mt-auto">{{ 'CLICK_HERE' | translate }}</a>
+          <button class="btn btn-primary mt-auto" (click)="navigateToFieldDetails()">
+  {{ 'CLICK_HERE' | translate }}
+</button>
         </div>
       </div>
     </div>
