--- a/src/app/registered/registered.component.html
+++ b/src/app/registered/registered.component.html
@@ -34,7 +34,9 @@
             </div>
 
             <!-- Payment button -->
-            <button class="btn btn-success mt-3" (click)="processPayment(item)">Pay</button>
+            <button class="btn btn-success mt-3" (click)="processPayment(item)">
+  {{ 'PAY_BUTTON' | translate }}
+</button>
           </div>
         </div>
       </div>
