--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,37 +1,39 @@
 <div class="container mt-5">
-  <h2>Enter Payment Details</h2>
+  <h2>{{ 'ENTER_PAYMENT_DETAILS' | translate }}</h2>
+
   <form #paymentForm="ngForm" (ngSubmit)="onSubmit(paymentForm)">
-    
     <div class="mb-3">
-      <label class="form-label">Account Holder Name</label>
+      <label class="form-label">{{ 'ACCOUNT_HOLDER' | translate }}</label>
       <input type="text" class="form-control" [(ngModel)]="paymentDetails.accountHolder" name="accountHolder" required>
     </div>
 
     <div class="mb-3">
-      <label class="form-label">Account Number</label>
+      <label class="form-label">{{ 'ACCOUNT_NUMBER' | translate }}</label>
       <input type="text" class="form-control" [(ngModel)]="paymentDetails.accountNumber" name="accountNumber" required>
     </div>
 
     <div class="mb-3">
-      <label class="form-label">Bank Name</label>
+      <label class="form-label">{{ 'BANK_NAME' | translate }}</label>
       <input type="text" class="form-control" [(ngModel)]="paymentDetails.bankName" name="bankName" required>
     </div>
 
     <div class="mb-3">
-      <label class="form-label">Branch Name</label>
+      <label class="form-label">{{ 'BRANCH_NAME' | translate }}</label>
       <input type="text" class="form-control" [(ngModel)]="paymentDetails.branchName" name="branchName" required>
     </div>
 
     <div class="mb-3">
-      <label class="form-label">IFSC Code</label>
+      <label class="form-label">{{ 'IFSC_CODE' | translate }}</label>
       <input type="text" class="form-control" [(ngModel)]="paymentDetails.ifscCode" name="ifscCode" required>
     </div>
 
     <div class="mb-3">
-      <label class="form-label">Mobile Number</label>
+      <label class="form-label">{{ 'MOBILE_NUMBER' | translate }}</label>
       <input type="text" class="form-control" [(ngModel)]="paymentDetails.mobileNumber" name="mobileNumber" required>
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit & Pay</button>
+    <button type="submit" class="btn btn-primary">
+      {{ 'SUBMIT_AND_PAY' | translate }}
+    </button>
   </form>
 </div>
