--- a/src/app/payment/payment.component.css
+++ b/src/app/payment/payment.component.css
@@ -2,7 +2,8 @@
     overflow-y: auto;
     max-height: 100vh;
 }
-html, body {
+body {
     height: 100%;
-    overflow-y: auto;
+    overflow-y: auto !important;
+    margin-bottom: 20px;
 }
